Fixed colors being too dark

--- a/css/theme/atalanda.css
+++ b/css/theme/atalanda.css
@@ -18,8 +18,8 @@ section.has-light-background h6 {
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #1b1f30;
-  background-color: #1b1f30; }
+  background: #353c54;
+  background-color: #353c54; }
 
 .reveal {
   font-family: "Campton", Helvetica, sans-serif;
@@ -29,12 +29,12 @@ body {
 
 ::selection {
   color: #fff;
-  background: #f6b4be;
+  background: white;
   text-shadow: none; }
 
 ::-moz-selection {
   color: #fff;
-  background: #f6b4be;
+  background: white;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -214,20 +214,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #e8425c;
+  color: #d8d8d8;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #f08697;
+  color: #fefefe;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #c51833; }
+  background: #b2b2b2; }
 
 /*********************************************
  * IMAGES
@@ -249,21 +249,21 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #e8425c;
+  border-color: #d8d8d8;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #e8425c; }
+  color: #d8d8d8; }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #e8425c; }
+  color: #d8d8d8; }
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
@@ -271,22 +271,22 @@ body {
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
 .hljs {
-  background-color: #121420;
+  background-color: #2b3144;
   padding: 50px !important; }
 
 .reveal pre code {
   max-height: 700px; }
 
 strong {
-  color: #e8425c; }
+  color: #d8d8d8; }
 
 html.dimbg .slide-background.present {
   opacity: 0.5 !important;
-  background-color: #1b1f30; }
+  background-color: #353c54; }
 
 html.dimbg .slide-background.future {
   opacity: 0 !important;
-  background-color: #1b1f30; }
+  background-color: #353c54; }
 
 .reveal h1,
 .reveal h2,
@@ -300,5 +300,5 @@ html.dimbg .slide-background.future {
   margin-bottom: 20px; }
 
 .reveal h4 {
-  color: #e8425c;
+  color: #d8d8d8;
   text-transform: uppercase; }
